Migrate from websocket to ws package (v0.4.6)
- Replace websocket dependency with ws ^8.18.0
- Refactor Connection.js to use native ws package API
- Maintain backward compatibility with existing API
- Improve message handling to support both string and Buffer types

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-lox-ws-api",
-  "version": "0.4.5-bugfix",
+  "version": "0.4.6",
   "description": "Web Socket Loxone™ API",
   "main": "lib/API.js",
   "scripts": {
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/codm/node-lox-ws-api#readme",
   "dependencies": {
-    "websocket": "1.0.31"
+    "ws": "^8.18.0"
   },
   "engines": {
     "node": ">=4.2.6"
